--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,106 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
 }
+
+header {
+  background-color: #373b69;
+  display: flex;
+  justify-content:space-between;
+  padding: 1rem;
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  margin-left: 5%;
+  border: 2px solid #8c90c4;
+  padding: 1rem;
+  border-radius: 50px;
+}
+
+.home:hover {
+  background-color: #8c90c4;
+  color:white;
+  cursor: pointer;
+}
+
+.search {
+  background-color: transparent;
+  border: 2px solid #8c90c4;
+  border-radius: 50px;
+  color: white;
+  font-family: inherit;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+}
+
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.movie {
+  background-color: #373b69;
+  border-radius: 3px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: relative;
+  width: 300px;
+  margin: 1rem;
+}
+
+.movie img {
+  max-width: 100%;
+}
+
+.movie-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.movie-info h3 {
+  margin: 0;
+}
+
+.movie-over {
+  background-color: #fff;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1); */
+  color: #373b69;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  max-height: 100%;
+  transform: translateY(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie:hover .movie-over {
+  transform: translateY(0%);
+}
+
+.vote{
+  background-color:#22254b;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+.vote.green {
+  color: green;
+}
+
+.vote.orange {
+  color: orange;
+}
+
+.vote.red {
+  color: red;
+}
